# ACO-HP-Folding

./: README.md  pyproject.toml
src/: aco_2d_gpt.py  aco_3d_gpt.py
