[tool.poetry]
name = "aco-hp-folding"
version = "0.1.0"
description = ""
authors = []

readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^2.2.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^23.12.0"
mypy = "^1.7.1"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]